# r-pak

./: README.html  README.md  pyproject.toml
r_pak/: main.py
tests/: test_r_pak.py
