[tool.poetry]
name = "r-pak"
version = "0.1.0"
description = ""
authors = ["piersyork <piersyork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.scripts]
r-pak = "r_pak.main:app"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
